# PolyPortia

./: .gitignore  LICENSE  README.md  polyportia.example.yaml  pyproject.toml
src/polyportia/: __init__.py
src/polyportia/budget/: enforcer.py  errors.py  estimator.py
src/polyportia/cli/: app.py
src/polyportia/config/: loader.py  models.py  policy.py  registry.py  resolver.py
src/polyportia/council/: __init__.py  context.py  debate.py  executor.py  failure.py  parallel.py  propose_review.py  synthesis.py
src/polyportia/observability/: cost.py  logging.py  store.py  trace.py
src/polyportia/providers/: base.py  errors.py  litellm_adapter.py
src/polyportia/sdk/: client.py
src/polyportia/server/: app.py  routes_council.py  routes_health.py  routes_openai.py  routes_traces.py  (+2 more)
tests/: conftest.py
tests/integration/: test_budget_http.py  test_cli.py  test_e2e_dummy.py  test_e2e_mid_execution.py  test_http_council.py  test_http_openai.py  test_sdk.py  test_streaming.py  test_traces_endpoint.py
tests/live/: README.md  conftest.py  polyportia.live.yaml  test_01_single_model.py  test_02_streaming.py  test_03_fallback.py  test_04_retry.py  test_05_parallel_council.py  test_06_synthesize_council.py  test_07_meta_council.py  test_08_traces.py  test_09_cli.py
tests/unit/: test_budget_enforcer.py  test_budget_estimator.py  test_config_loader.py  test_debate.py  test_dummy_server.py  test_edge_cases.py  test_failure_policy.py  test_fallback.py  test_parallel.py  test_policy_cascade.py  test_propose_review.py  test_resolver.py  test_retry.py  test_synthesize.py
(+9 files in other folders)
