[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyportia"
version = "0.1.0"
description = "Model-agnostic LLM gateway with first-class model-council orchestration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "theWebCrawler" }]
dependencies = [
    "litellm>=1.50",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "rich>=13.7",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
polyportia = "polyportia.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polyportia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/polyportia"]
